# ER

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_dependies.md  build_klee  build_klee_ironpatch  build_klee_llvm8  build_llvm  port_final_todolist  test_env
artifact/: Dockerfile  README.txt  install.sh
examples/ambiguous_memmodel/: Makefile  binput  input  main.c  stdin_int_to_bin.c
examples/common/: Makefile.inc
examples/get_sign/: Makefile  get_sign.c
examples/qsort/: Makefile  geninput.c  klee-env.sh  klee-record.sh  klee-replay.sh  quicksort.c  stdin
include/klee/: .klee.h.swp  Common.h  Constraints.h  ExecutionState.h  ExecutorCmdLine.h  ExecutorDebugHelper.h  Expr.h  Interpreter.h  OptionCategories.h  Solver.h  SolverImpl.h  SolverStats.h  Statistic.h  Statistics.h  Threading.h  TimerStatIncrementer.h  klee.h
lib/Basic/: CmdLineOptions.cpp  ConstructSolverChain.cpp  Statistics.cpp
lib/Core/: .Executor.cpp.swp  AddressSpace.cpp  AddressSpace.h  CMakeLists.txt  Context.cpp  CoreStats.cpp  CoreStats.h  ExecutionState.cpp  Executor.cpp  Executor.h  ExecutorCmdLine.h  ExecutorConfig.cpp  ExecutorConfig.h  ExecutorDebugHelper.cpp  ExecutorDebugHelper.h  ExecutorTimers.cpp  ExecutorUtil.cpp  ExternalDispatcher.cpp  GetElementPtrTypeIterator.h  ImpliedValue.cpp  Memory.cpp  Memory.h  MemoryManager.cpp  MemoryManager.h  Searcher.cpp  SeedInfo.cpp  SpecialFunctionHandler.cpp  SpecialFunctionHandler.h  StatsTracker.cpp  Threading.cpp  TimingSolver.cpp  TimingSolver.h  dlmalloc.cpp  dlmalloc.h
lib/Expr/: Assignment.cpp  AssignmentGenerator.cpp  CMakeLists.txt  Constraints.cpp  Expr.cpp  ExprConcretizer.cpp  ExprConcretizer.h  ExprDebugHelper.cpp  ExprDeepVisitor.cpp  ExprEvaluator.cpp  ExprPPrinter.cpp  ExprReplaceVisitor.cpp  ExprSMTLIBPrinter.cpp  ExprStats.cpp  ExprStats.h  ExprVisitor.cpp  IndependentElementSet.cpp  Lexer.cpp  OracleEvaluator.cpp  OracleEvaluator.h  Parser.cpp  Updates.cpp
lib/Module/: AssignIDPass.cpp  CMakeLists.txt  Checks.cpp  DebugIR.cpp  DebugPass.cpp  FunctionAlias.cpp  InstructionInfoTable.cpp  InstructionOperandTypeCheckPass.cpp  IntrinsicCleaner.cpp  KInstruction.cpp  KModule.cpp  LowerSwitch.cpp  ModuleUtil.cpp  OptNone.cpp  Optimize.cpp  PTWritePass.cpp  Passes.h  PhiCleaner.cpp  RaiseAsm.cpp  RmFabsPass.cpp  SelectRandom.cpp  TagPass.cpp  WorkaroundLLVMPR39177.cpp
lib/Solver/: AssignmentValidatingSolver.cpp  CachingSolver.cpp  CexCachingSolver.cpp  IndependentSolver.cpp  QueryLoggingSolver.cpp  QueryLoggingSolver.h  STPBuilder.cpp  STPSolver.cpp  Solver.cpp  SolverCmdLine.cpp  SolverStats.cpp  ValidatingSolver.cpp  Z3Builder.cpp  Z3Solver.cpp
runtime/: CMakeLists.txt
tools/: CMakeLists.txt
tools/concretizer/: CMakeLists.txt  main.cpp
tools/debugir/: CMakeLists.txt
tools/debugir/src/: CMakeLists.txt  DebugIR.cpp
tools/kleaver/: CMakeLists.txt  DataRecReplaceVisitor.cpp  DataRecReplaceVisitor.h  Drawer.cpp  Drawer.h  EnumClass.h  ExprInPlaceTransformation.cpp  ExprInPlaceTransformation.h  GraphvizDOTDrawer.cpp  GraphvizDOTDrawer.h  JsonDrawer.cpp  JsonDrawer.h  main.cpp
tools/klee/: main.cpp
tools/oracle-ktest/: CMakeLists.txt  main.cpp
tools/pathviewer/: CMakeLists.txt  main.cpp
tools/prepass/: CMakeLists.txt  main.cpp
(+79 files in other folders)
